--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 
     <div class="container">
         <div class="profile-image">
-            <img src="your_photo.jpg" alt="Ваше фото">
+            <img src="cs.jpg" alt="Ваше фото">
             <h1>Ім'я Прізвище</h1>
         </div>
         <div class="bio-content">
