--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Released under the MIT license: http://jsbin.mit-license.org
     <div class="container">
         <div class="profile-image">
             <img src="cs.jpg" alt="Ваше фото">
-            <h1>Ім'я Прізвище</h1>
+            <h1>moson</h1>
         </div>
         <div class="bio-content">
             <h2>Про мене</h2>
